# python-uecp

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/uecp/: __init__.py  byte_stuffing_codec.py  frame.py  rds_character_set_codec.py
src/uecp/commands/: __init__.py  base.py  bidirectional.py  clock_control.py  control_n_setup.py  mixins.py  rds_control.py  rds_message.py
src/uecp/serial_con/: device.py
tests/: __init__.py  test_byte_stuffing_codec.py  test_frames.py  test_messages.py  test_rds_character_set_codec.py  test_uecp.py  test_utils.py  test_version.py
tests/commands/: test_base.py  test_bidirectional.py  test_clock_control.py  test_control_n_setup.py  test_mixins.py  test_rds_control.py  test_rds_message.py
tests/messages/: test_base.py  test_mixins.py  test_rds.py
uecp/: __init__.py  byte_stuff_codec.py  byte_stuffing_codec.py  frame.py  messages.py  rds_character_set_codec.py
uecp/commands/: __init__.py  base.py  bidirectional.py  clock_control.py  control_n_setup.py  rds_control.py  rds_message.py
uecp/messages/: __init__.py  base.py  mixins.py  rds.py
uecp/serial_con/: device.py  protocol.py
