[tool.poetry]
name = "uecp"
version = "0.0.1"
description = "UECP encoder & decoder"
authors = ["Christian Kohlstedde <christian@kohlsted.de>"]
license = "MIT"
readme = "README.md"

keywords = ["UECP", "RDS", "Radio", "FM"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: German",
]

[tool.poetry.dependencies]
python = "^3.9"
crc = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
pytest-cov = "^3.0.0"
pytest-dependency = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
