[tool.poetry]
name = "uecp"
version = "0.4.0a1"
description = "UECP encoder & decoder"
authors = ["Christian Kohlstedde <christian@kohlsted.de>"]
license = "MIT"
readme = "README.md"

keywords = ["UECP", "RDS", "Radio", "FM"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: German",
]

[tool.poetry.dependencies]
python = "^3.9"
crc = "^1.2.0"
attrs = "^22.1.0"
pyserial = "^3.5"
pyserial-asyncio = "^0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
pytest-cov = "^3.0.0"
pytest-dependency = "^0.5.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
