[tool.poetry]
name = "uecp"
version = "0.4.0"
description = "UECP encoder & decoder"
authors = ["Christian Kohlstedde <christian@kohlsted.de>"]
license = "MIT"
readme = "README.md"

keywords = ["UECP", "RDS", "Radio", "FM"]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: German",
]

[tool.poetry.dependencies]
python = "^3.11"
crc = "^1.2.0"
attrs = "^23.2.0"
pyserial = "^3.5"
pyserial-asyncio = "^0.6"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-dependency = "^0.6.0"
pytest-sugar = "^1.0.0"
black = "^24.4.2"
flake8 = "^7.0.0"
pep8-naming = "^0.14.1"
isort = "^5.13.2"
mypy = "^1.10.0"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py311']

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.coverage.run]
branch = true
